# SPD_03

./: CMakeLists.txt
include/: functions.hpp  t_job.hpp  t_jobSeries.hpp  time_fun.hpp
src/: functions.cpp  main.cpp  t_jobSeries.cpp  time_fun.cpp
